--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     >
         <div class="h-full w-full text-center mx-auto h-screen w-full flex items-center justify-center flex-col" style="position: relative; z-index: 99;">
             <div class="mx-auto mb-4 size-48 rounded-full aspect-square overflow-hidden">
-                <img class="size-full object-cover" src="image/gallery-2.jpg" alt="" height="150" width="150">
+                <img class="size-full object-cover" src="image/gallery-4.jpg" alt="" height="150" width="150">
             </div>
             <div class="mb-4 text-7xl font-bold font-accent" data-aos="zoom-in" data-aos-duration="3000">Baby's</div>
             <div class="mb-16" data-aos="zoom-in" data-aos-duration="3000">is turning one!</div>
@@ -90,7 +90,7 @@
 
                 <h2 class="font-latin text-4xl mb-4">Alamat</h2>
                 <p class="mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, dolorum fuga quae hic nobis eveniet ipsum.</p>
-                <a href="#" target="_blank" rel="noopener noreferrer" class="inline-block mb-8 bg-orange-500 text-white py-3 px-6 rounded-xl hover:bg-orange-700">Buka Google Maps</a>
+                <a href="https://maps.app.goo.gl/x9vZFH936F3GiebSA" target="_blank" rel="noopener noreferrer" class="inline-block mb-8 bg-orange-500 text-white py-3 px-6 rounded-xl hover:bg-orange-700">Buka Google Maps</a>
             </div>
         </section>
 
@@ -99,22 +99,22 @@
                 <h2 class="font-latin text-4xl mb-4">Our Memories</h2>
                 <div class="grid grid-cols-2 gap-2 mb-2">
                     <div class="aspect-square overflow-hidden">
-                        <img class="size-full object-cover" src="/no-image.webp" alt="" height="150" width="150">
+                        <img class="size-full object-cover" src="image/gallery-1.jpg" alt="" height="150" width="150">
                     </div>
                     <div class="aspect-square overflow-hidden">
-                        <img class="size-full object-cover" src="/no-image.webp" alt="" height="150" width="150">
+                        <img class="size-full object-cover" src="image/gallery-2.jpg" alt="" height="150" width="150">
                     </div>
                     <div class="aspect-square overflow-hidden">
-                        <img class="size-full object-cover" src="/no-image.webp" alt="" height="150" width="150">
+                        <img class="size-full object-cover" src="image/gallery-3.jpg" alt="" height="150" width="150">
                     </div>
                     <div class="aspect-square overflow-hidden">
-                        <img class="size-full object-cover" src="/no-image.webp" alt="" height="150" width="150">
+                        <img class="size-full object-cover" src="image/gallery-4.jpg" alt="" height="150" width="150">
                     </div>
                     <div class="aspect-square overflow-hidden">
-                        <img class="size-full object-cover" src="/no-image.webp" alt="" height="150" width="150">
+                        <img class="size-full object-cover" src="image/gallery-5.jpg" alt="" height="150" width="150">
                     </div>
                     <div class="aspect-square overflow-hidden">
-                        <img class="size-full object-cover" src="/no-image.webp" alt="" height="150" width="150">
+                        <img class="size-full object-cover" src="image/gallery-1.jpg" alt="" height="150" width="150">
                     </div>
                 </div>
             </div>
